Imported from https://kcomkar@github.com/kcomkar/Quiz.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Quiz is a tiny console/terminal based C program to conduct assessments
+[access "refs/*"]
+	owner = group user/K Chandrasekhar Omkar (kcomkar)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/K Chandrasekhar Omkar (kcomkar)
+	label-Verified = -1..+1 group user/K Chandrasekhar Omkar (kcomkar)
+	push = group user/K Chandrasekhar Omkar (kcomkar)
+	read = group user/K Chandrasekhar Omkar (kcomkar)
+	rebase = group user/K Chandrasekhar Omkar (kcomkar)
+	removeReviewer = group user/K Chandrasekhar Omkar (kcomkar)
+	submit = group user/K Chandrasekhar Omkar (kcomkar)
+[access "refs/heads/*"]
+	create = group user/K Chandrasekhar Omkar (kcomkar)
+	push = +force group user/K Chandrasekhar Omkar (kcomkar)
+	pushMerge = group user/K Chandrasekhar Omkar (kcomkar)
+	read = group user/K Chandrasekhar Omkar (kcomkar)
+[access "refs/tags/*"]
+	push = group user/K Chandrasekhar Omkar (kcomkar)
+	push = +force group user/K Chandrasekhar Omkar (kcomkar)
